--- a/review-page.html
+++ b/review-page.html
@@ -38,6 +38,8 @@
           />
           <p class="image-caption">
             Friday the 13th (1980)
+			 <br>
+			Written by <a href="about-page.html">Nica Pierce</a>
           </p>
           <br />
           <p>
@@ -45,7 +47,7 @@
           </p>
           <br />
           <p>
-            Camp Crystal Lake, a real-life Boy Scout camp in New Jersey, transforms into a terrifying location for six unsuspecting camp counselors and the owner of the camping grounds. The main sense of horror that the setting does is create a sense of isolation and unease that fuels the horror. Over the course of the film, one by one a camp counselor gets picked off, dying in gruesome and gorey ways. A storm casts over the camp at night and the weather plus the time of day adds to the isolating presence that is brought forth by an empty camping ground. A few of the counselors go out and search for each other and that leads to some of their demises.
+            Camp Crystal Lake, a <a href="https://crystallaketours.com/">real-life Boy Scout camp in New Jersey</a>, transforms into a terrifying location for six unsuspecting camp counselors and the owner of the camping grounds. The main sense of horror that the setting does is create a sense of isolation and unease that fuels the horror. Over the course of the film, one by one a camp counselor gets picked off, dying in gruesome and gorey ways. A storm casts over the camp at night and the weather plus the time of day adds to the isolating presence that is brought forth by an empty camping ground. A few of the counselors go out and search for each other and that leads to some of their demises.
           </p>
           <br />
           <p>
@@ -56,6 +58,9 @@
             Ultimately, the setting of a lakeside summer camp in New Jersey was the perfect place for the Friday the 13th movie in the 1980s. The isolating environment coupled with the variance in topography pushed a scary slasher film that still causes fear today. It added to the narrative in a way that other settings might not have, and the idea of a killer picking off your coworkers one by one in a place where you can’t call for help because phone signals are down and there is no civilization for miles is terrifying.
           </p>
           <br />
+		<p>
+			Friday the 13th is available to purchase <a href="https://www.thriftbooks.com/w/friday-the-13th-sean-s-cunningham/1000054410/item/61785685/?utm_source=google&utm_medium=cpc&utm_campaign=low_vol_backlist_standard_shopping_customer_acquisition_16919871551&utm_adgroup=&utm_term=&utm_content=593118743925&gad_source=1&gclid=Cj0KCQjwy46_BhDOARIsAIvmcwNqg5uL7p7y6n3JF0q970JusRt-FeZXml1jFvRLhfGF2YwzzgfGuBkaAhzcEALw_wcB#idiq=61785685&edition=8269263">here</a> as a DVD. To watch via streaming, access it through <a href="https://pluto.tv/us/on-demand/movies/5e97f54cc733d6001a19f619?utm_medium=textsearch&utm_source=google">Pluto TV</a>.
+			</p>
           
         </article>
 
@@ -76,7 +81,7 @@
           </p>
           <br />
           <p>
-            Warren County, New Jersey, is a hidden gem tucked away in the far northwest corner of the state. As someone who has spent their entire life in Northern New Jersey, I can say that this area offers a stark contrast to the more bustling and urbanized parts of the state. With its lush green landscapes, scenic hills, and quaint small towns, Warren County feels like a retreat from the hustle and bustle of city life.
+            <a href="https://www.warrencountynj.gov/">Warren County</a>, New Jersey, is a hidden gem tucked away in the far northwest corner of the state. As someone who has spent their entire life in Northern New Jersey, I can say that this area offers a stark contrast to the more bustling and urbanized parts of the state. With its lush green landscapes, scenic hills, and quaint small towns, Warren County feels like a retreat from the hustle and bustle of city life.
 			</p>
           <br />
           <p>
@@ -85,7 +90,7 @@
           </p>
           <br />
           <p>
-            The historic town of Phillipsburg is another highlight, with its charming downtown and the popular Delaware River Railroad Excursions offering scenic train rides through the picturesque landscape. For history buffs, Warren County has a rich past, with historic landmarks and museums scattered throughout the region. The area also boasts small local farms, wineries, and orchards, providing visitors with a taste of local agriculture and artisanal goods.
+            The historic town of <a href="https://www.phillipsburgnj.org/">Phillipsburg</a> is another highlight, with its charming downtown and the popular Delaware River Railroad Excursions offering scenic train rides through the picturesque landscape. For history buffs, Warren County has a rich past, with historic landmarks and museums scattered throughout the region. The area also boasts small local farms, wineries, and orchards, providing visitors with a taste of local agriculture and artisanal goods. These small towns within Warren County are popular destinations for <a href="https://movie-locations.com/movies/f/Friday-The-13th-1980.php">filming movies</a>, as the architecture can add a special touch to the background of a film.
           </p>
           <br />
           <p>
