--- a/about-page.html
+++ b/about-page.html
@@ -23,8 +23,17 @@
       </nav>
     </header>
 	  <main>
-        
-		  
+		  <div class="wrapper">
+		  <br>
+		  <h1>Biteback Co.</h1>
+		  <br>
+		  <p>We are a team that has a great interest in the grotesque, traveling to different parts of America to dive deep into where your favorite horror films were shot.</p>
+		  <p>
+			  Biteback Co. started in 2018, when the three of us, Nica, Kirsty, and Jesse, were in our university's horror club. We were watching 
+			  </p>
+			</div>
+        <h1>Meet the team behind Biteback Co.</h1>
+		
 		<section class="showcase">
 
 
@@ -34,7 +43,7 @@
 
 				<!-- image -->
 
-				<a href=""><img src="" alt="Nica"></a>
+				<a href=""><img src="finalImgs/nica.png" alt="Nica"></a>
 
 				<p>My name is Nica and I am the lead writer. I have spent years recording all of the horror spots local to New York and New Jersey. I've been from Brick to Brooklyn, from Poughkeepsie to Passaic searching for the sets of slashers and other horror movies...and sometimes the horrors find me. I will continue to document these frightful areas before the evils eventually claim me.</p>
 
@@ -47,7 +56,7 @@
 
 				<!-- page preview image -->
 
-				<a href=""><img src="" alt="Kirsty"></a>
+				<a href=""><img src="finalImgs/kirsty.png" alt="Kirsty"></a>
 
 				<p>In these New Jersey suburbs, the worst villains can be seen wreaking havoc on white pickett fences. These settings are particularly scary because they are happening right in your home.</p>
 
@@ -60,7 +69,7 @@
 
 				<!-- page preview image -->
 
-				<a href=""><img src="" alt="Jesse"></a>
+				<a href=""><img src="finalImgs/jesse.png" alt="Jesse"></a>
 
 				<p>These films are located in very rural, closed-off areas that add to the creepiness of being alone. States that are full of bustling cities like New York and New Jersey do indeed have rural farm areas!</p>
 
