--- a/review-page.html
+++ b/review-page.html
@@ -30,7 +30,7 @@
 
         <!-- Review 1: Friday the 13th (1980) -->
         <article class="review">
-          <h2>Friday the 13th’s use of New Jersey camping grounds added the perfect amount of isolation</h2>
+          <h2><u>Friday the 13th’s use of New Jersey camping grounds added the perfect amount of isolation</u></h2>
           <img
             src=""
             alt="Image of Friday the 13th"
@@ -67,13 +67,17 @@
         <!-- Review 2: Warren County -->
         <article class="review">
           <h2>
+			  <u>
             Warren County New Jersey: Its highlights, lowlights, and overall atmosphere
+			  </u>
           </h2>
           <img
             src=""
             alt="Warren County"
             width="100%"
           />
+			<br>
+			<p>Written by Kirsty Cotton</p>
           <br />
          
           <p>
