--- a/home-page.html
+++ b/home-page.html
@@ -24,19 +24,18 @@
     </header>
 	  <main>
         <section class="lead">
+			
+			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey">  <!-- visual lead -->
 
-			<h1 class="primary-statement">Is your home state haunted?</h1>
+			<h1>Is your home state haunted?</h1>
 
-			<p class="secondary-statement">It's more likely than you think.</p>
+			<h2>It's more likely than you think.</h2>
 
 			<div class="wrapper">
-			<p>New York and New Jersey are home to many horror films. From Bride of Chucky to Friday the 13th, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
+			<p>New York and New Jersey are home to many horror films. From <em>Bride of Chucky</em> to <em>Friday the 13th</em>, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
 			<p></p>
 		</div>
 		</section><!-- lead section ends -->
-	
-
-		<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey">  <!-- visual lead -->
 
 		  
 		<section class="showcase">
