--- a/map-page.html
+++ b/map-page.html
@@ -24,15 +24,11 @@
     </header>
 	  <main>
         <section class="lead">
-			
-			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey">  <!-- visual lead -->
 
-			<h1>Is your home state haunted?</h1>
-
-			<h2>It's more likely than you think.</h2>
+			<h1>Where Movies are Set vs Where Movies are Shot</h1>
 
 			<div class="wrapper">
-			<p>New York and New Jersey are home to many horror films. From <em>Bride of Chucky</em> to <em>Friday the 13th</em>, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
+			<p>Many of the films that are inspired by or take place in the Northeast are not necessarily shot there. Let's take a look at if the setting and where they were actually shot line up for these films!</p>
 			<p></p>
 		</div>
 		</section><!-- lead section ends -->
@@ -40,49 +36,33 @@
 		  
 		<section class="showcase">
 
-
-			<div class="showcase-item" id="showcase-item-1">
-
-				<h3>Manhattan's Manslaughter</h3>
-
-				<!-- image -->
-
-				<a href=""><img src="finalImgs/patrick img2.jpg" alt="Representative preview image (not a screenshot)"></a>
-
-				<p>The films featured here take place in the Big Apple, NYC. While navigating through the bustling city, these monsters took advantage of the vulnerable while killing left and right.</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
-
-			</div><!-- showcase item ends-->
-
 			
-			<div class="showcase-item" id="showcase-item-2">
-
-				<h3>New Jersey Suburbs</h3>
-
-				<!-- page preview image -->
-
-				<a href=""><img src="finalImgs/myers img4.jpg" alt="Representative preview image (not a screenshot)"></a>
-
-				<p>In these New Jersey suburbs, the worst villains can be seen wreaking havoc on white pickett fences. These settings are particularly scary because they are happening right in your home.</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
-
-			</div><!-- showcase item ends-->
-
-			<div class="showcase-item" id="showcase-item-3">
-
-				<h3>Isolated Environments</h3>
-
-				<!-- page preview image -->
-
-				<a href=""><img src="finalImgs/amityville img3.jpg" alt="Representative preview image (not a screenshot)"></a>
-
-				<p>These films are located in very rural, closed-off areas that add to the creepiness of being alone. States that are full of bustling cities like New York and New Jersey do indeed have rural farm areas!</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
-
-			</div><!-- showcase item ends-->
+			<div class="map-grid">
+		<div class="map-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
+			<p>Jason Takes Over Manhattan is set in Manhattan</p></div>
+		<div class="map-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
+			<p>It was shot in...</p></div>
+		<div class="map-item"><img src="finalImgs/patrick img2.jpg" alt="American Psycho">
+			<p>American Psycho takes place in NYC</p></div>
+		<div class="map-item"><img src="finalImgs/patrick img2.jpg" alt="American Psycho">
+			<p>It was shot in...</p></div>
+		<div class="map-item"><img src="finalImgs/amityville img3.jpg" alt="Amityville Horror">
+			<p>Amityville Horror takes place on Long Island, NY</p></div>
+		<div class="map-item"><img src="finalImgs/amityville img3.jpg" alt="Amityville Horror">
+			<p>It was shot in...</p></div>
+		<div class="map-item"><img src="finalImgs/myers img4.jpg" alt="Halloween">
+			<p>Halloween takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p></div>
+		<div class="map-item"><img src="finalImgs/myers img4.jpg" alt="Halloween">
+			<p>It was shot in...</p></div>
+		<div class="map-item"><img src="finalImgs/camp img5.jpg" alt="Friday the 13th">
+			<p>Friday the 13th takes place at Camp Crystal Lake (fictional)</p></div>
+		<div class="map-item"><img src="finalImgs/camp img5.jpg" alt="Friday the 13th">
+			<p>It was shot in...</p></div>
+		<div class="map-item"><img src="finalImgs/chucky img6.jpg" alt="Bride of Chucky">
+			<p>Bride of Chucky takes place across New York and New Jersey</p></div>
+		<div class="map-item"><img src="finalImgs/chucky img6.jpg" alt="Bride of Chucky">
+			<p>It was shot in...</p></div>
+		  </div>
 
 		</section><!-- showcase ends -->
 
