--- a/review-page.html
+++ b/review-page.html
@@ -32,7 +32,7 @@
         <article class="review">
           <h2><u>Friday the 13th’s use of New Jersey camping grounds added the perfect amount of isolation</u></h2>
           <img
-            src=""
+            src="finalImgs/reviewimg1.jpg"
             alt="Image of Friday the 13th"
             width="100%"
           />
