--- a/review-page.html
+++ b/review-page.html
@@ -72,7 +72,7 @@
 			  </u>
           </h2>
           <img
-            src=""
+            src="finalImgs/reviewimg2.jpg"
             alt="Warren County"
             width="100%"
           />
