--- a/gallery-page.html
+++ b/gallery-page.html
@@ -30,7 +30,7 @@
 		<article class="review">
 		<div class="gallery-grid">
 		<div class="gallery-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
-			<p>Jason Takes Over Manhattan</p></div>
+			<p>Jason Takes Manhattan</p></div>
 		<div class="gallery-item"><img src="finalImgs/patrick img2.jpg" alt="American Psycho">
 			<p>American Psycho</p></div>
 		<div class="gallery-item"><img src="finalImgs/amityville img3.jpg" alt="Amityville Horror">
