--- a/map-page.html
+++ b/map-page.html
@@ -52,35 +52,37 @@
 		<h3><i class="fa-solid fa-camera icon-blue"></i> Filming Location <i class="fa-solid fa-skull icon-gray"></i> Movie Setting <i class="fa-solid fa-eye icon-red"></i> Both Set + Film Location</h3>
 		
 		  
-		<section class="showcase">
+		<section class="mapflex">
 
 			
-			<div class="map-grid">
-		<div class="map-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
-			<p id ="manhattan">Jason Takes Manhattan takes place in Manhattan</p></div>
-		<div class="map-item"><img src="finalImgs/vancouver.jpg" alt="Jason Takes Over Manhattan">
-			<p>It was shot in Vancouver, British Columbia</p></div>
-		<div class="map-item"><img src="finalImgs/patrick img2.jpg" alt="American Psycho">
-			<p>American Psycho takes place in Manhattan</p></div>
-		<div class="map-item"><img src="finalImgs/toronto1.jpg" alt="American Psycho">
-			<p>It was shot in Toronto, Ontario</p></div>
-		<div class="map-item"><img src="finalImgs/amityville img3.jpg" alt="Amityville Horror">
-			<p id ="longisland">Amityville Horror takes place on Long Island, NY</p></div>
-		<div class="map-item"><img src="finalImgs/tomsriver.jpg" alt="Amityville Horror">
-			<p>It was shot in Toms River, NJ</p></div>
-		<div class="map-item"><img src="finalImgs/myers img4.jpg" alt="Halloween">
-			<p id ="haddonfield">Halloween takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p></div>
-		<div class="map-item"><img src="finalImgs/myers img4.jpg" alt="Halloween">
-			<p>It was shot in South Pasadena, CA</p></div>
-		<div class="map-item"><img src="finalImgs/camp img5.jpg" alt="Friday the 13th">
-			<p id ="blairstown">Friday the 13th takes place at Camp Crystal Lake (fictional)</p></div>
-		<div class="map-item"><img src="finalImgs/blairstown.jpg" alt="Friday the 13th">
-			<p>It was shot in Blairstown, NJ</p></div>
-		<div class="map-item"><img src="finalImgs/chucky img6.jpg" alt="Bride of Chucky">
-			<p id ="hackensack">Bride of Chucky takes place across New York and New Jersey</p></div>
-		<div class="map-item"><img src="finalImgs/chucky img6.jpg" alt="Bride of Chucky">
-			<p>It was shot in Toronto, Ontario</p></div>
-		  </div>
+		<div class="mapflex-item">
+			<img src="finalImgs/manhattan.jpg" alt="Manhattan"  width="900" height="600">
+				<p id ="manhattan">Jason Takes Manhattan takes place in Manhattan</p></div>
+			
+		
+			<div class="mapflex-item"><img src="finalImgs/vancouver.jpg" alt="Vancouver"  width="900" height="600">
+				<p id = "vancouver">It was shot in Vancouver, British Columbia</p></div>
+
+			<div class="mapflex-item"><img src="finalImgs/toronto1.jpg" alt="Toronto" width="900" height="600">
+				<p id="toronto">It was shot in Toronto, Ontario</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/longisland.jpg" alt="Long Island" width="900" height="600">
+				<p id ="longisland">Amityville Horror takes place on Long Island, NY</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/tomsriver.jpg" alt="Toms River" width="900" height="600">
+				<p id="tomsriver">It was shot in Toms River, NJ</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/haddonfield.jpg" alt="Haddonfield" width="900" height="600">
+				<p id ="haddonfield">Halloween takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/pasadena.jpg" alt="South Pasadena" width="900" height="600">
+				<p id="southpasadena">It was shot in South Pasadena, CA</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/blairstown.jpg" alt="Blairstown" width="900" height="600">
+				<p id="blairstown">It was shot in Blairstown, NJ</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/hackensack.jpg" alt="Hackensack" width="900" height="600">
+				<p id ="hackensack">Bride of Chucky takes place across New York and New Jersey</p></div>
 
 		</section><!-- showcase ends -->
 		
