--- a/home-page.html
+++ b/home-page.html
@@ -14,10 +14,11 @@
         <a href="index.html"><img src="finalImgs/final site logo.svg" alt="Horror's House" />
         </a>
         <ul>
-			<li><a href="home-page.html">Home</a></li>
+		  <li><a href="home-page.html">Home</a></li>
           <li><a href="review-page.html">Reviews</a></li>
           <li><a href="gallery-page.html">Gallery</a></li>
           <li><a href="map-page.html">Map</a></li>
+		  <li><a href="essay.html">Visual Essay</a></li>
           <li><a href="about-page.html">About</a></li>
         </ul>
       </nav>
@@ -80,7 +81,7 @@
 
 				<p>These films are located in very rural, closed-off areas that add to the creepiness of being alone. States that are full of bustling cities like New York and New Jersey do indeed have rural farm areas!</p>
 
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
+				<p><a href="review-page.html">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
 
 			</div><!-- showcase item ends-->
 
