--- a/map-page.html
+++ b/map-page.html
@@ -15,10 +15,11 @@
         <a href="index.html"><img src="finalImgs/final site logo.svg" alt="Horror's House" />
         </a>
         <ul>
-			<li><a href="home-page.html">Home</a></li>
+		<li><a href="home-page.html">Home</a></li>
           <li><a href="review-page.html">Reviews</a></li>
           <li><a href="gallery-page.html">Gallery</a></li>
           <li><a href="map-page.html">Map</a></li>
+		  <li><a href="essay.html">Visual Essay</a></li>
           <li><a href="about-page.html">About</a></li>
         </ul>
       </nav>
