--- a/home-page.html
+++ b/home-page.html
@@ -26,7 +26,7 @@
 	  <main>
         <section class="lead">
 			
-			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey">  <!-- visual lead -->
+			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey" width="100%">  <!-- visual lead -->
 
 			<h1>Is your home state haunted?</h1>
 
