--- a/map-page.html
+++ b/map-page.html
@@ -58,32 +58,32 @@
 			
 		<div class="mapflex-item">
 			<img src="finalImgs/manhattan.jpg" alt="Manhattan"  width="900" height="600">
-				<p id ="manhattan">Jason Takes Manhattan takes place in Manhattan</p></div>
-			
-		
-			<div class="mapflex-item"><img src="finalImgs/vancouver.jpg" alt="Vancouver"  width="900" height="600">
-				<p id = "vancouver">It was shot in Vancouver, British Columbia</p></div>
-
-			<div class="mapflex-item"><img src="finalImgs/toronto1.jpg" alt="Toronto" width="900" height="600">
-				<p id="toronto">It was shot in Toronto, Ontario</p></div>
+				<p id ="manhattan">The films <em>Jason Takes Manhattan</em> (1989) and <em>American Psycho</em> (2000) take place in Manhattan.</p></div>
 			
 			<div class="mapflex-item"><img src="finalImgs/longisland.jpg" alt="Long Island" width="900" height="600">
-				<p id ="longisland">Amityville Horror takes place on Long Island, NY</p></div>
-			
-			<div class="mapflex-item"><img src="finalImgs/tomsriver.jpg" alt="Toms River" width="900" height="600">
-				<p id="tomsriver">It was shot in Toms River, NJ</p></div>
-			
-			<div class="mapflex-item"><img src="finalImgs/haddonfield.jpg" alt="Haddonfield" width="900" height="600">
-				<p id ="haddonfield">Halloween takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p></div>
-			
-			<div class="mapflex-item"><img src="finalImgs/pasadena.jpg" alt="South Pasadena" width="900" height="600">
-				<p id="southpasadena">It was shot in South Pasadena, CA</p></div>
-			
-			<div class="mapflex-item"><img src="finalImgs/blairstown.jpg" alt="Blairstown" width="900" height="600">
-				<p id="blairstown">It was shot in Blairstown, NJ</p></div>
+				<p id ="longisland"><em>Amityville Horror</em> (1979) takes place on Long Island, NY</p></div>
 			
 			<div class="mapflex-item"><img src="finalImgs/hackensack.jpg" alt="Hackensack" width="900" height="600">
-				<p id ="hackensack">Bride of Chucky takes place across New York and New Jersey</p></div>
+				<p id ="hackensack"><em>Bride of Chucky</em> (1998) takes place across New York and New Jersey but the finale of the movie takes place in Hackensack</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/blairstown.jpg" alt="Blairstown" width="900" height="600">
+				<p id="blairstown"><em>Friday the 13th</em> (1980) takes place at the fictional Camp Crystal Lake but was shot in Blairstown, NJ</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/haddonfield.jpg" alt="Haddonfield" width="900" height="600">
+				<p id ="haddonfield"><em>Halloween</em> (1978) takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/vancouver.jpg" alt="Vancouver"  width="900" height="600">
+				<p id = "vancouver">Vancouver, British Columbia was where <em>Jason Takes Manhattan</em> was filmed.</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/tomsriver.jpg" alt="Toms River" width="900" height="600">
+				<p id="tomsriver"><em>Amityville Horror</em> was shot in Toms River, NJ</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/pasadena.jpg" alt="South Pasadena" width="900" height="600">
+				<p id="southpasadena"><em>Halloween</em> was shot in South Pasadena, CA</p></div>
+			
+			<div class="mapflex-item"><img src="finalImgs/toronto1.jpg" alt="Toronto" width="900" height="600">
+				<p id="toronto">Both <em>Bride of Chucky</em> and <em>American Psycho</em> were filmed in Toronto, Ontario </p></div>
+			
 
 		</section><!-- showcase ends -->
 		
