--- a/map-page.html
+++ b/map-page.html
@@ -58,31 +58,59 @@
 			
 		<div class="mapflex-item">
 			<img src="finalImgs/manhattan.jpg" alt="Manhattan"  width="900" height="600">
-				<p id ="manhattan">The films <em>Jason Takes Manhattan</em> (1989) and <em>American Psycho</em> (2000) take place in Manhattan.</p></div>
+				<p id ="manhattan">The films <em>Jason Takes Manhattan</em> (1989) and <em>American Psycho</em> (2000) take place in Manhattan.</p>
+				<br>
+				<p>Credit: Daniele Pieroni</p>
+			
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/longisland.jpg" alt="Long Island" width="900" height="600">
-				<p id ="longisland"><em>Amityville Horror</em> (1979) takes place on Long Island, NY</p></div>
+				<p id ="longisland"><em>Amityville Horror</em> (1979) takes place on Long Island, NY</p>
+			<br>
+				<p>Credit: Lakes Region Realty Group</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/hackensack.jpg" alt="Hackensack" width="900" height="600">
-				<p id ="hackensack"><em>Bride of Chucky</em> (1998) takes place across New York and New Jersey but the finale of the movie takes place in Hackensack</p></div>
+				<p id ="hackensack"><em>Bride of Chucky</em> (1998) takes place across New York and New Jersey but the finale of the movie takes place in Hackensack</p>
+			<br>
+				<p>Credit: New Jersey Multiple Listing Service, Inc.</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/blairstown.jpg" alt="Blairstown" width="900" height="600">
-				<p id="blairstown"><em>Friday the 13th</em> (1980) takes place at the fictional Camp Crystal Lake but was shot in Blairstown, NJ</p></div>
+				<p id="blairstown"><em>Friday the 13th</em> (1980) takes place at the fictional Camp Crystal Lake but was shot in Blairstown, NJ</p>
+			<br>
+				<p>Credit: podrozniczka60 on Tripadvisor</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/haddonfield.jpg" alt="Haddonfield" width="900" height="600">
-				<p id ="haddonfield"><em>Halloween</em> (1978) takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p></div>
+				<p id ="haddonfield"><em>Halloween</em> (1978) takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p>
+			<br>
+				<p>Credit: Denis Malloy</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/vancouver.jpg" alt="Vancouver"  width="900" height="600">
-				<p id = "vancouver">Vancouver, British Columbia was where <em>Jason Takes Manhattan</em> was filmed.</p></div>
+				<p id = "vancouver">Vancouver, British Columbia was where <em>Jason Takes Manhattan</em> was filmed.</p>
+			<br>
+				<p>Credit: Destination Reps</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/tomsriver.jpg" alt="Toms River" width="900" height="600">
-				<p id="tomsriver"><em>Amityville Horror</em> was shot in Toms River, NJ</p></div>
+				<p id="tomsriver"><em>Amityville Horror</em> was shot in Toms River, NJ</p>
+			<br>
+				<p>Credit: Toms River Township</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/pasadena.jpg" alt="South Pasadena" width="900" height="600">
-				<p id="southpasadena"><em>Halloween</em> was shot in South Pasadena, CA</p></div>
+				<p id="southpasadena"><em>Halloween</em> was shot in South Pasadena, CA</p>
+			<br>
+				<p>Credit: Visit Pasadena</p>
+			</div>
 			
 			<div class="mapflex-item"><img src="finalImgs/toronto1.jpg" alt="Toronto" width="900" height="600">
-				<p id="toronto">Both <em>Bride of Chucky</em> and <em>American Psycho</em> were filmed in Toronto, Ontario </p></div>
+				<p id="toronto">Both <em>Bride of Chucky</em> and <em>American Psycho</em> were filmed in Toronto, Ontario </p>
+			<br>
+				<p>Credit: shutterlk on Shutterstock</p>
+			</div>
 			
 
 		</section><!-- showcase ends -->
