--- a/map-page.html
+++ b/map-page.html
@@ -57,59 +57,102 @@
 
 			
 		<div class="mapflex-item">
+			<h2 id ="manhattan">Manhattan</h2>
 			<img src="finalImgs/manhattan.jpg" alt="Manhattan"  width="900" height="600">
-				<p id ="manhattan">The films <em>Jason Takes Manhattan</em> (1989) and <em>American Psycho</em> (2000) take place in Manhattan.</p>
+				<p>The films <em>Jason Takes Manhattan</em> (1989) and <em>American Psycho</em> (2000) take place in Manhattan.</p>
 				<br>
-				<p>Credit: Daniele Pieroni</p>
+				<p>Manhattan is the most densely populated of New York City’s 5 boroughs. It's mostly made up of Manhattan Island, bounded by the Hudson, East and Harlem rivers. Among the world’s major commercial, financial and cultural centers, it’s the heart of “the Big Apple.” Its iconic sites include skyscrapers such as the Empire State Building, neon-lit Times Square and the theaters of Broadway. The population of Manhattan (recorded in 2023) is 1.628 million people and its land area is 22.82 square miles.</p>
+				<br>
+				<p> Photo Credit: Daniele Pieroni</p>
+			<a href="#">Return to top</a>
 			
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/longisland.jpg" alt="Long Island" width="900" height="600">
-				<p id ="longisland"><em>Amityville Horror</em> (1979) takes place on Long Island, NY</p>
+			<div class="mapflex-item">
+				<h2 id ="longisland">Long Island</h2>
+				<img src="finalImgs/longisland.jpg" alt="Long Island" width="900" height="600">
+				<p><em>Amityville Horror</em> (1979) takes place on Long Island, NY</p>
 			<br>
-				<p>Credit: Lakes Region Realty Group</p>
+				<p>Long Island is an expansive, densely populated island in southeastern New York State, stretching east from New York City. Along its Atlantic coast are Jones Beach State Park, Fire Island and Montauk Point State Park, the latter home to the late-1700s Montauk Lighthouse. On the east end, the North Fork is home to wineries and the Hamptons are towns characterized by upscale homes, trendy restaurants and antiques shops. The population of Long Island (recorded in 2020) is 8,063,232 people and its land area is 1,401 square miles.</p>
+				<br>
+				<p>Photo Credit: Lakes Region Realty Group</p>
+				<a href="#">Return to top</a>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/hackensack.jpg" alt="Hackensack" width="900" height="600">
-				<p id ="hackensack"><em>Bride of Chucky</em> (1998) takes place across New York and New Jersey but the finale of the movie takes place in Hackensack</p>
+			<div class="mapflex-item">
+				<h2 id ="hackensack">Hackensack</h2>
+				<img src="finalImgs/hackensack.jpg" alt="Hackensack" width="900" height="600">
+				<p><em>Bride of Chucky</em> (1998) takes place across New York and New Jersey but the finale of the movie takes place in Hackensack</p>
+				<br>
+				<p>Hackensack is a town in Bergen County, which is located in the Northeast portion of New Jersey. The area was officially named New Barbadoes Township until 1921, but has informally been known as Hackensack since at least the 18th century. Hackensack is located approximately 12 miles from Midtown Manhattan and about 7 miles from the George Washington Bridge. The name <em>Hackensack</em> comes from the Algonquian Indigenous word <em>Achinigeu-hach</em> or <em>Ackingsah-sack</em>, meaning stony ground. The population (recorded in 2023) is 45,736 people and its land area is 4.35 square miles.</p>
 			<br>
-				<p>Credit: New Jersey Multiple Listing Service, Inc.</p>
+				<p>Photo Credit: New Jersey Multiple Listing Service, Inc.</p>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/blairstown.jpg" alt="Blairstown" width="900" height="600">
-				<p id="blairstown"><em>Friday the 13th</em> (1980) takes place at the fictional Camp Crystal Lake but was shot in Blairstown, NJ</p>
+			<div class="mapflex-item">
+				<h2 id="blairstown">Blairstown</h2>
+				<img src="finalImgs/blairstown.jpg" alt="Blairstown" width="900" height="600">
+				<p><em>Friday the 13th</em> (1980) takes place at the fictional Camp Crystal Lake but was shot in Blairstown, NJ</p>
 			<br>
-				<p>Credit: podrozniczka60 on Tripadvisor</p>
+				<p>Blairstown is a township in Warren County, which is located in the Northwest portion of New Jersey. The township was named for John Insley Blair, who was an American entrepreneur, railroad magnate, philanthropist, and one of the 19th century's wealthiest men. The population (recorded in 2023) is 5,757 people and its land area is 29.89 square miles.</p>
+				<br>
+				<p>Photo Credit: podrozniczka60 on Tripadvisor</p>
+				<a href="#">Return to top</a>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/haddonfield.jpg" alt="Haddonfield" width="900" height="600">
-				<p id ="haddonfield"><em>Halloween</em> (1978) takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p>
+			<div class="mapflex-item">
+				<h2 id ="haddonfield">Blairstown</h2>
+				<img src="finalImgs/haddonfield.jpg" alt="Haddonfield" width="900" height="600">
+				<p><em>Halloween</em> (1978) takes place in Haddonfield, IL (fictional) but was inspired by Haddonfield, NJ</p>
 			<br>
-				<p>Credit: Denis Malloy</p>
+				<p>Haddonfield is a borough in Camden County, which is located in the Southwest portion of New Jersey. A fun fact about Haddonfield is that it is a significant historic paleontology site. Haddonfield was named after a man named John Haddon, someone who has never set foot in America. His daughter, Elizabeth Haddon, developed the town in New Jersey as a place for people to escape religious persecution. The population (recorded in 2023) is 12,571 people and its land area is 2.84 square miles.</p>
+				<br>
+				<p>Photo Credit: Denis Malloy</p>
+				<a href="#">Return to top</a>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/vancouver.jpg" alt="Vancouver"  width="900" height="600">
-				<p id = "vancouver">Vancouver, British Columbia was where <em>Jason Takes Manhattan</em> was filmed.</p>
+			<div class="mapflex-item">
+				<h2 id = "vancouver">Vancouver</h2>
+				<img src="finalImgs/vancouver.jpg" alt="Vancouver"  width="900" height="600">
+				<p>Vancouver, British Columbia was where <em>Jason Takes Manhattan</em> was filmed.</p>
 			<br>
-				<p>Credit: Destination Reps</p>
+				<p>Vancouver, a bustling west coast seaport in British Columbia, is among Canada’s densest, most ethnically diverse cities. A popular filming location, it’s surrounded by mountains, and also has thriving art, theatre and music scenes. Vancouver Art Gallery is known for its works by regional artists, while the Museum of Anthropology houses preeminent First Nations collections. The population (recorded in 2022) is 706,012 people and its land area is 44.39 square miles.</p>
+				<br>
+				<p>Photo Credit: Destination Reps</p>
+				<a href="#">Return to top</a>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/tomsriver.jpg" alt="Toms River" width="900" height="600">
-				<p id="tomsriver"><em>Amityville Horror</em> was shot in Toms River, NJ</p>
+			<div class="mapflex-item">
+				<h2 id="tomsriver">Toms River</h2>
+				<img src="finalImgs/tomsriver.jpg" alt="Toms River" width="900" height="600">
+				<p><em>Amityville Horror</em> was shot in Toms River, NJ</p>
 			<br>
-				<p>Credit: Toms River Township</p>
+				<p>Toms River is a township and coastal town located on the Jersey Shore in Ocean County, which is located in the Southeastern part of New Jersey. It was known as the <em>Township of Dover</em> up until 2006, when its name changed. Different sources recognized the origin of the name from either English captain William Tom, or farmer and ferryman Thomas Luker until it was officially named after Thomas Luker. Its original name came from the town Dover, England. The population (recorded in 2023) is 99,091 people and its land area is 52.89 square miles.</p>
+				<br>
+				<p>Photo Credit: Toms River Township</p>
+				<a href="#">Return to top</a>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/pasadena.jpg" alt="South Pasadena" width="900" height="600">
-				<p id="southpasadena"><em>Halloween</em> was shot in South Pasadena, CA</p>
+			<div class="mapflex-item">
+				<h2 id="southpasadena">South Pasadena</h2>
+				<img src="finalImgs/pasadena.jpg" alt="South Pasadena" width="900" height="600">
+				<p><em>Halloween</em> was shot in South Pasadena, CA</p>
 			<br>
-				<p>Credit: Visit Pasadena</p>
+				<p>South Pasadena is a city in Los Angeles County, located in the Southern part of California. The original inhabitants of the area were members of the Native American Hahamog-na tribe, a branch of the Tongva Nation (part of the Shoshone language group) that occupied the Los Angeles Basin. The original name for the area the spans across modern South Pasadena and part of Pasadena was Akuvranga, a Tongva word. The population (recorded in 2023) is 25,623 people and its land area is 3.42 square miles.</p>
+				<br>
+				<p>Photo Credit: Visit Pasadena</p>
+				<a href="#">Return to top</a>
 			</div>
 			
-			<div class="mapflex-item"><img src="finalImgs/toronto1.jpg" alt="Toronto" width="900" height="600">
-				<p id="toronto">Both <em>Bride of Chucky</em> and <em>American Psycho</em> were filmed in Toronto, Ontario </p>
+			<div class="mapflex-item">
+				<h2 id="toronto">Toronto</h2>
+				<img src="finalImgs/toronto1.jpg" alt="Toronto" width="900" height="600">
+				<p>Both <em>Bride of Chucky</em> and <em>American Psycho</em> were filmed in Toronto, Ontario </p>
 			<br>
-				<p>Credit: shutterlk on Shutterstock</p>
+				<p>Toronto, the capital of the province of Ontario, is a major Canadian city along Lake Ontario’s northwestern shore. It's a dynamic metropolis with a core of soaring skyscrapers, all dwarfed by the iconic, free-standing CN Tower. Toronto also has many green spaces, from the orderly oval of Queen’s Park to 400-acre High Park and its trails, sports facilities and zoo. The population (recorded in 2022) is 3.026 million people and its land area is 243.3 square miles.</p>
+				<br>
+				<p>Photo Credit: shutterlk on Shutterstock</p>
+				<a href="#">Return to top</a>
 			</div>
 			
 
