--- a/gallery-page.html
+++ b/gallery-page.html
@@ -14,11 +14,10 @@
         <a href="index.html"><img src="finalImgs/final site logo.svg" alt="Horror's House" />
         </a>
         <ul>
-		<li><a href="home-page.html">Home</a></li>
+			<li><a href="home-page.html">Home</a></li>
           <li><a href="review-page.html">Reviews</a></li>
           <li><a href="gallery-page.html">Gallery</a></li>
           <li><a href="map-page.html">Map</a></li>
-		  <li><a href="essay.html">Visual Essay</a></li>
           <li><a href="about-page.html">About</a></li>
         </ul>
       </nav>
@@ -31,7 +30,7 @@
 		<article class="review">
 		<div class="gallery-grid">
 		<div class="gallery-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
-			<p>Jason Takes Manhattan</p></div>
+			<p>Jason Takes Over Manhattan</p></div>
 		<div class="gallery-item"><img src="finalImgs/patrick img2.jpg" alt="American Psycho">
 			<p>American Psycho</p></div>
 		<div class="gallery-item"><img src="finalImgs/amityville img3.jpg" alt="Amityville Horror">
