--- a/home-page.html
+++ b/home-page.html
@@ -14,29 +14,29 @@
         <a href="index.html"><img src="finalImgs/final site logo.svg" alt="Horror's House" />
         </a>
         <ul>
-		  <li><a href="home-page.html">Home</a></li>
+			<li><a href="home-page.html">Home</a></li>
           <li><a href="review-page.html">Reviews</a></li>
           <li><a href="gallery-page.html">Gallery</a></li>
           <li><a href="map-page.html">Map</a></li>
-		  <li><a href="essay.html">Visual Essay</a></li>
           <li><a href="about-page.html">About</a></li>
         </ul>
       </nav>
     </header>
 	  <main>
         <section class="lead">
-			
-			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey" width="100%">  <!-- visual lead -->
 
-			<h1>Is your home state haunted?</h1>
+			<h1 class="primary-statement">Is your home state haunted?</h1>
 
-			<h2>It's more likely than you think.</h2>
+			<p class="secondary-statement">It's more likely than you think.</p>
 
 			<div class="wrapper">
-			<p>New York and New Jersey are home to many horror films. From <em>Bride of Chucky</em> to <em>Friday the 13th</em>, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
+			<p>New York and New Jersey are home to many horror films. From Bride of Chucky to Friday the 13th, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
 			<p></p>
 		</div>
 		</section><!-- lead section ends -->
+	
+
+		<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey">  <!-- visual lead -->
 
 		  
 		<section class="showcase">
@@ -81,7 +81,7 @@
 
 				<p>These films are located in very rural, closed-off areas that add to the creepiness of being alone. States that are full of bustling cities like New York and New Jersey do indeed have rural farm areas!</p>
 
-				<p><a href="review-page.html">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
+				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
 
 			</div><!-- showcase item ends-->
 
