--- a/review-page.html
+++ b/review-page.html
@@ -18,7 +18,6 @@
           <li><a href="review-page.html">Reviews</a></li>
           <li><a href="gallery-page.html">Gallery</a></li>
           <li><a href="map-page.html">Map</a></li>
-		  <li><a href="essay.html">Visual Essay</a></li>
           <li><a href="about-page.html">About</a></li>
         </ul>
       </nav>
@@ -31,9 +30,9 @@
 
         <!-- Review 1: Friday the 13th (1980) -->
         <article class="review">
-          <h2><u>Friday the 13th’s use of New Jersey camping grounds added the perfect amount of isolation</u></h2>
+          <h2>Friday the 13th’s use of New Jersey camping grounds added the perfect amount of isolation</h2>
           <img
-            src="finalImgs/reviewimg1.jpg"
+            src=""
             alt="Image of Friday the 13th"
             width="100%"
           />
@@ -68,17 +67,13 @@
         <!-- Review 2: Warren County -->
         <article class="review">
           <h2>
-			  <u>
             Warren County New Jersey: Its highlights, lowlights, and overall atmosphere
-			  </u>
           </h2>
           <img
-            src="finalImgs/reviewimg2.jpg"
+            src=""
             alt="Warren County"
             width="100%"
           />
-			<br>
-			<p>Written by Kirsty Cotton</p>
           <br />
          
           <p>
